nested elements have been fixed, paddings and align-item have been added to the header

--- a/src/style.css
+++ b/src/style.css
@@ -16,15 +16,8 @@ ul {
 .home {
   display: flex;
   justify-content: space-between;
-}
-
-.logo {
-  margin: 10px;
-  margin-left: 50px;
-}
-
-.nav-bar {
-  margin-right: 50px;
+  padding: 0 50px;
+  align-items: center;
 }
 
 .nav-list {
@@ -54,7 +47,7 @@ ul {
 .is-active::after {
   content: "";
   background-color: #00acdc;
-  width: 37px;
+  width: 100%;
   height: 4px;
   border-radius: 8px;
   position: absolute;
